--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.10.1.jar" sourcepath="C:/Users/ASUS_USER/.m2/repository/com/google/code/gson/gson/2.10.1/gson-2.10.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jBCrypt-0.4.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
